--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 text-center" id="top-bar">
-			<img src="/assets/images/burger.png" alt="burger" />
+			<img src="/assets/img/burger.jpg"/>
 			<h1> Eat-Da-Burger! </h1>
 		</div>
 		<div class="col-xs-6 text-center" class="task">
@@ -15,7 +15,8 @@
 				</div>
 				<div class="col-xs-3 text-center">
 					<form method="POST" action="/burgers/update?_method=PUT" class="button-size">
-						<input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
+						<input input type="hidden" type="text" name="burger_id" value={{this.id}}>
+                        <br>
 						<button type="submit" class="btn btn-default">Devour it!</button>
 					</form>
 				</div>
@@ -32,15 +33,16 @@
 		</div>
 	</div>
 </div>
-
+<br>
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 text-center enter_section">
 			<form action="/burgers/create" method="POST">
 				<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                <br>
 				<button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
 			</form>
-			<p>Enter a burger you want to eat Click the "Submit" button.</p>
+			<p>Enter a burger you want to eat</p>
 		</div>
 	</div>
 </div>
